      * #617 Screen tearing on some computers (didn't affect gfx_directx)
      * #1140 64-bit Mac gfx_sdl: Random crash in SDL_SoftStretch
      * #1147 64-bit Mac gfx_sdl: run-away memory leak
      * #1115 Linux gfx_sdl: can't resize the window on Xfce
      * #1173 Windows gfx_sdl: Enter key stuck after changing window zoom level
        in Custom
    * Many bugs fixed in gfx_sdl2, which was previously experimental [Ralph]
    * The currency global text string wasn't used for attack harm text or cost
      descriptions [Ralph]
    * If the player unequips something when there's no room in the inventory they
      now get the "No room" message instead of losing the equipment (other
      methods of unequipping still destroy the item!) [Ralph]
    * Bug #1137 crashes and "BUG: missing sprite component" errors when swapping
      heroes immediately before a map change [James]
    * Tweaked battle target cursor movement to fix some (but not all) odd
      behaviour and a possibility of unselectable targets! [Ralph]
    * Bug #38 Virus scanners raise false alarm on game.exe when a game icon is
      embedded while distributing a game. Most virus scanners stopped reporting
      a false positive anyway, but we now use a fixed embedding tool that sets
      the correct .exe checksum [Ralph]

  *** Stuff Only Developers Will Notice
    * clang can be used to compile instead of gcc. Added "compiler=clang|gcc"
      flag to scons [Ralph]
    * hspeak now built using eubind instead of euc in debug builds; using eubind
      avoids linker errors when compiling Euphoria->C on recent Linux distros


May 2 2020 [Gorgonzola]

  *** New Features
    * True transparent sprite and map layer slices!
      You can control opacity and blend mode: normal, add or multiply.
      Blending works by mapping to the nearest master palette color, which
      is fast-enough but sometimes looks poor; there's a global setting to